--- a/done.html
+++ b/done.html
@@ -1,10 +1,18 @@
 <html>
-    <head>
-        <title>Parabens</title>
-        <script type= "text/javascript"  src = "js/main.js" > </script>
-    </head>
-    <body>
-        <h1 id='done-msg'>Parabens</h1>
-        <p id='done-back' onclick='home()'>Voltar</p>
-    </body>
+
+<head>
+    <title>Parabens</title>
+    <link rel="stylesheet" href="/styles/home.css">
+    <script type="text/javascript" src="js/main.js"> </script>
+</head>
+
+<body>
+    <div id="done">
+        <h1 id='done-msg'>Parabens!</h1>
+        <a id='done-back' onclick='home()'>Voltar</a>
+
+    </div>
+
+</body>
+
 </html>
